--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<style>
+body {background-color:#000000;}
 
+</style>
+
+<title>hi</title>
+<body>
+heading blah blah blah
+</body>
+
+</html>
