--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: black;
+  background-color: #000000;
 }
 html {
   width: 100%;
