--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <style>
 
-body {background-image:url("mainbg.png");background-size:cover;font-family: "Lato", sans-serif}
+body {background-image:url("mainbg.png");background-size:100%;font-family: "Lato", sans-serif}
 
 .mySlides {display: none}
 
