--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <style>
 
-body {background-image:url("mainbg.png");background-size:contain;font-family: "Lato", sans-serif}
+body {background-image:url("mainbg.png");background-size:contain;background-repeat:none;font-family: "Lato", sans-serif}
 
 .mySlides {display: none}
 
