--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <style>
 
-body {background-image:url("mainbg.png");background-size:auto 100%;background-repeat:no-repeat;font-family: "Lato", sans-serif}
+body {background-image:url("mainbg.png");background-size:cover;background-repeat:no-repeat;font-family: "Lato", sans-serif}
 
 .mySlides {display: none}
 
