--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <style>
 
-body {background-image:url("mainbg.png");background-size:cover;background-repeat:no-repeat;font-family: "Lato", sans-serif}
+body {font-family: "Lato", sans-serif}
+  
+#band {background-image:url("mainbg.png");background-size:cover;background-repeat:no-repeat;}
 
 .mySlides {display: none}
 
