--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body {font-family: "Lato", sans-serif}
 
 <!-- The Band Section -->
 
-<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+<div class="w3-container w3-content w3-center w3-padding-64" id="band">
 
 <h2 class="w3-wide">THE BAND</h2>
 
