--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 body {font-family: "Lato", sans-serif}
   
 #band {background-image:url("mainbg.png");background-size:cover;background-repeat:no-repeat;max-width:100%;min-width:300px;}
-
+  #tour {margin-top:500px;}
 .mySlides {display: none}
 
 
