--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 body {font-family: "Lato", sans-serif}
   
 #band {background-image:url("mainbg.png");background-size:cover;background-repeat:no-repeat;max-width:100%;min-width:300px;}
-  #tour {margin-top:500px;}
+ #tour {margin-top:500px;}
 .mySlides {display: none}
 
 
@@ -188,7 +188,7 @@ adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliq
 
 <div class="w3-black" id="tour">
 
-<div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+<div class="w3-container w3-content w3-padding-64" style="max-width:800px;margin-top:600px;">
 
 <h2 class="w3-wide w3-center">TOUR DATES</h2>
 
