--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliq
 
 <div class="w3-black" id="tour">
 
-<div class="w3-container w3-content w3-padding-64" style="max-width:800px;margin-top:600px;">
+<div class="w3-container w3-content w3-padding-64" style="max-width:800px;">
 
 <h2 class="w3-wide w3-center">TOUR DATES</h2>
 
