--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 
-<title>W3.CSS Templarfeftrfekefvtfj...f.</title>
+<title>W3.CSS Templarfeftrfejkefvtfj...f.</title>
 
 <meta charset="UTF-8">
 
