--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 
-<title>W3.CSS Tmekmeujkkefvtjkofj...f.</title>
+<title>W3.CSS Tmekmeujkkefvtkjkofj...f.</title>
 
 <meta charset="UTF-8">
 
