--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 body {font-family: "Lato", sans-serif}
   
-#band {background-image:url("mainbg.png");background-size: cover;background-repeat:no-repeat;max-width:100%;}
+#band {background-image:url("mainbg.png");background-size: 100%;background-repeat:no-repeat;max-width:100%;}
 .mySlides {display: none}
 
 
