--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 
-<title>W3.CSS Tmekmeujkkefvtkjkkofj...f.</title>
+<title>W3.CSS Tmekmeujkkefvtkjhkkofj...f.</title>
 
 <meta charset="UTF-8">
 
@@ -19,7 +19,7 @@
 
 body {font-family: "Lato", sans-serif}
   
-#band {background-image:url("mainbg.png");background-size: 100%;background-repeat:no-repeat;max-width:100%;}
+#band {background-image:url("mainbg.png");background-size: auto 100%;background-repeat:no-repeat;max-width:100%;}
 .mySlides {display: none}
 
 
