--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 body {font-family: "Lato", sans-serif}
   
-#band {background-image:url("mainbg.png");background-size: contain;background-repeat:no-repeat;min-width:400px;}
+#band {background-image:url("mainbg.png");background-size: cover;background-repeat:no-repeat;min-width:400px;}
 .mySlides {display: none}
 
 
