--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 body {font-family: "Lato", sans-serif}
   
-#band {background-image:url("mainbg.png");background-size: 160%;min-width: 700px;background-repeat:no-repeat;}
+#band {background-image:url("mainbg.png");background-size: contain;min-width: 700px;background-repeat:no-repeat;}
 .mySlides {display: none}
 
 
