--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 body {font-family: "Lato", sans-serif}
   
 #band {background-image:url("mainbg.png");background-size: contain;min-width: 700px;max-width:100%;background-repeat:no-repeat;}
- @media only screen and (min-width: 700px) {
-    body { 
+ @media only screen and (max-width: 700px) {
+    #band { 
         background-image: url('https://cdn.pixabay.com/photo/2014/03/29/09/17/cat-300572_960_720.jpg'); 
     }
 }
