--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 body {font-family: "Lato", sans-serif}
   
 #band {background-image:url("mainbg.png");background-size: cover;max-width:100%;background-repeat:no-repeat;}
- @media only (max-width: 600px) {
+ @media only (min-width: 600px) {
     #band { 
         background-image: url('https://cdn.pixabay.com/photo/2014/03/29/09/17/cat-300572_960_720.jpg'); 
     }
