--- a/index.html
+++ b/index.html
@@ -19,17 +19,7 @@
 
 body {font-family: "Lato", sans-serif}
   
-  
-   @media only (min-width: 600px) {
-    #band { 
-        background-image: url('mainbg.png'); 
-    }
-}
-  
- @media only (max-width: 600px) {
-    #band { 
-        background-image: url('https://cdn.pixabay.com/photo/2014/03/29/09/17/cat-300572_960_720.jpg'); 
-    }
+  #band {background-color:red;}
 }
 .mySlides {display: none}
 
