--- a/basic-internal.html
+++ b/basic-internal.html
@@ -14,15 +14,15 @@
 <!-- Mobile viewport -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<link rel="shortcut icon" href="images/favicon.ico"  type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico"  type="image/x-icon">
 
 <!-- CSS-->
 <!-- Google web fonts. You can get your own bundle at http://www.google.com/fonts. Don't forget to update the CSS accordingly!-->
 <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Ubuntu' rel='stylesheet' type='text/css'>
 
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="js/flexslider/flexslider.css">
-<link rel="stylesheet" href="css/basic-style.css">
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="flexslider.css">
+<link rel="stylesheet" href="basic-style.css">
 
 <!-- end CSS-->
     
