--- a/colorblocks.html
+++ b/colorblocks.html
@@ -27,7 +27,7 @@
 <!-- end CSS-->
     
 <!-- JS-->
-<script src="js/libs/modernizr-2.6.2.min.js"></script>
+<script src="modernizr-2.6.2.min.js"></script>
 <!-- end JS-->
 
 
@@ -258,10 +258,10 @@ border: 1px solid #887dc2
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery-1.9.0.min.js">\x3C/script>')</script>
 
-<script defer src="js/flexslider/jquery.flexslider-min.js"></script>
+<script defer src="jquery.flexslider-min.js"></script>
 
 <!-- fire ups - read this file!  -->   
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 
  
 
