--- a/colorblocks-internal.html
+++ b/colorblocks-internal.html
@@ -14,7 +14,7 @@
 <!-- Mobile viewport -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<link rel="shortcut icon" href="images/favicon.ico"  type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico"  type="image/x-icon">
 
 <!-- CSS-->
 <!-- Google web fonts. You can get your own bundle at http://www.google.com/fonts. Don't forget to update the CSS accordingly!-->
@@ -39,7 +39,7 @@
     <header class="wrapper clearfix">
 		       
         <div id="banner">        
-        	<div id="logo"><a href="colorblocks.html"><img src="images/colorblocks-logo.svg" alt="logo"></a></div> 
+        	<div id="logo"><a href="colorblocks.html"><img src="colorblocks-logo.svg" alt="logo"></a></div> 
         </div>
         
         <!-- main navigation -->
@@ -157,12 +157,12 @@
 
 <!-- jQuery -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.9.0.min.js">\x3C/script>')</script>
+<script>window.jQuery || document.write('<script src="jquery-1.9.0.min.js">\x3C/script>')</script>
 
-<script defer src="js/flexslider/jquery.flexslider-min.js"></script>
+<script defer src="jquery.flexslider-min.js"></script>
 
 <!-- fire ups - read this file!  -->   
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
