--- a/colorblocks-internal.html
+++ b/colorblocks-internal.html
@@ -27,7 +27,7 @@
 <!-- end CSS-->
     
 <!-- JS-->
-<script src="js/libs/modernizr-2.6.2.min.js"></script>
+<script src="modernizr-2.6.2.min.js"></script>
 <!-- end JS-->
 
 </head>
