--- a/basic.html
+++ b/basic.html
@@ -17,7 +17,7 @@
 <link rel="shortcut icon" href="favicon.ico"  type="image/x-icon">
 
 <!-- CSS-->
-<!-- Google web fonts. You can get your own bundle at http://www.google.com/fonts. Don't forget to update the CSS accordingly!-->
+<!-- Google web fonts. You can geft your own bundle at http://www.google.com/fonts. Don't forget to update the CSS accordingly!-->
 <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Ubuntu' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" href="normalize.css">
